Bugfixs
Desktop:
 + Agregado modulo console (Comandos destinados a ejecutarse en consola).

 * Extensión MVE modificada para asignar el volumen al doble de la cantidad especificada. (Mejora enfocada en aumentar el rango de normalizacion).

 * El scrollbar ya no es visible.

--- a/desktop/css/main.css
+++ b/desktop/css/main.css
@@ -17,7 +17,7 @@ body {
 
   /* ScrollBar */
   -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  /* scrollbar-width: none; /* Firefox */
 }
 
 body::-webkit-scrollbar {
